<resources>
    <string name="app_name">TutorMandarin</string>
    <string name="server_client_id">118678332637-63kmuc5nuc4l17tv3e0a3j5jn77915a9.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1439689359690020</string>
    <string name="fabric_api_key">xQdgo3nwPtBLbuYh7gtwBnbW8</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="lmd_sign_up_sign_in">Sign up/Sign in</string>
    <string name="lmd_notifications">Notifications</string>
    <string name="lmd_upcoming_lesson">Upcoming lesson</string>
    <string name="lmd_my_resume">My Resume</string>
    <string name="lmd_my_level">My Level</string>
    <string name="lmd_my_badges">My Badges</string>
    <string name="lmd_my_notes">My Notes</string>
    <string name="lmd_walkthrough">Walkthrough</string>
    <string name="lmd_understand_free_trial">Understand Free Trial</string>
    <string name="lmd_credit">CREDIT</string>
    <string name="lmd_sign_out">Sign out</string>
    <string name="lmd_share_app">Share TutorMandarin</string>
    <string name="lmd_no_upcoming">No upcoming lesson</string>
    <string name="lmd_refer_a_friend">Refer a friend</string>
    <string name="lmd_share_extra_title">&#160;invited you to learn Chinese with TutorMandarin.</string>
    <string name="lmd_share_extra_content">
<![CDATA[I\'m using new app TutorMandarin to learn Chinese. Click <u><a href="http://tutormandarin.net">here</a></u> to check it out! <br/>https://www.tutormandarin.net/en/]]>
</string>
    <string name="lmd_sign_out_msg">Are you sure you want to sign out?</string>
    <string name="lmd_sign_out_cancel">Cancel</string>
    <string name="lmd_btn_sign_out">Sign out</string>
    <string name="lmd_whats_price">What\'s Pricing</string>
    <string name="si_email_hint">example@name.com</string>
    <string name="si_invalid_email">e-mail format is not correct.</string>
    <string name="si_mobile_phone">Phone</string>
    <string name="si_rb_mobile_phone">Phone</string>
    <string name="si_invalid_phone">Phone format is not correct.</string>
    <string name="si_email">E-mail</string>
    <string name="si_password">Password</string>
    <string name="si_invalid_password">Password format is not correct.</string>
    <string name="si_forgot_password">Forgot Password</string>
    <string name="si_btn_sign_in">Sign in</string>
    <string name="si_sign_in">Sign in</string>
    <string name="si_sign_up_link">Don\'t have an account? Sign up</string>
    <string name="si_have_account">Don\'t have an account? </string>
    <string name="si_sign_up">Sign up</string>
    <string name="si_dialog_ok">OK</string>
    <string name="si_signing_in">Sign in&#8230;</string>
    <string name="si_sign_in_error">Error</string>
    <string name="si_dialog_email_error_lbl">Sorry, the email you entered is not exist, please check again.</string>
    <string name="si_dialog_forget_pwd_email">E-mail</string>
    <string name="si_dialog_forget_pwd_lbl">Send a new password to your email.</string>
    <string name="si_dialog_forget_pwd_ok">OK</string>
    <string name="si_dialog_forget_pwd_cancel">Cancel</string>
    <string name="si_dialog_forget_loading">Loading&#8230;</string>
    <string name="si_dialog_email_error_loading">Loading&#8230;</string>
    <string name="si_dialog_reset_time_limit">Reset password should not be trigger less than 1 min. Please try again later</string>
    <string name="si_dialog_reset_time_limit_ok">OK</string>
    <string name="si_dialog_send_succeed">Send succeed</string>
    <string name="si_dialog_send_succeed_txt">The mail will send to you in few minutes, please change the password in 30 mins.</string>
    <string name="si_dialog_send_succeed_ok">OK</string>
    <string name="si_google_sign_in_error">Can\'t sign in</string>
    <string name="si_google_result_error">Error</string>
    <string name="si_connection_error">Connection Error</string>
    <string name="si_sign_in_with">sign in with</string>
    <string name="su_sign_up_trailer">Sign up for Free Trial</string>
    <string name="su_invalid_name">First and last name format is not correct.</string>
    <string name="su_email">E-mail</string>
    <string name="su_invalid_email">e-mail format is not correct.</string>
    <string name="su_phone">Phone</string>
    <string name="su_invalid_phone">Phone format is not correct.</string>
    <string name="su_password">Password</string>
    <string name="su_invalid_password">Password format is not correct.</string>
    <string name="su_sign_up_create_account">Create Account</string>
    <string name="su_first_name">First name</string>
    <string name="su_last_name">Last name</string>
    <string name="su_eg_email">123@example.com</string>
    <string name="su_mobile_phone">Phone</string>
    <string name="su_password_hint">6–10 Characters</string>
    <string name="su_dialog_ok">OK</string>
    <string name="su_congratulation">Congratulations!</string>
    <string name="su_congratulation_msg">You have signed up for your 50 minute free trial. A consultant will contact you as soon as possible and help schedule the class.</string>
    <string name="su_dialog_congratulation_ok">OK</string>
    <string name="su_sign_up_error">Error</string>
    <string name="su_signing_up">Sign up&#8230;</string>
    <string name="su_term_and_agreement_1">I agree to TutorMandarin\'s&#160;</string>
    <string name="su_term_and_agreement_2">Terms of Service</string>
    <string name="su_term_and_agreement_3">&#160;and&#160;</string>
    <string name="su_term_and_agreement_4">Privacy Policy.</string>
    <string name="su_have_account">Already have an account? </string>
    <string name="su_sign_in">Sign in</string>
    <string name="su_step_of_three">Step %d of 3</string>
    <string name="su_google_sign_in_error">Can\'t sign in</string>
    <string name="su_google_result_error">Error</string>
    <string name="su_connection_error">Connection Error</string>
    <string name="su_tutormandarin_account">TutorMandarin Account</string>
    <string name="su_chinese_level_title">Your Chinese Level</string>
    <string name="su_chinese_level_msg">Tell us what level you think you\'re at now. That way we can recommend appropriate courses, materials, and more. Don\'t worry if it\'s off, all students have the opportunity to get a full language evaluation from a professional Chinese tutor.</string>
    <string name="su_chinese_level_ok">OK</string>
    <string name="su_your_goals_title">Your Goals</string>
    <string name="su_your_goals_msg">We understand that your goals may change over time. Visit your profile any time to update.</string>
    <string name="su_your_goals_ok">OK</string>
    <string name="su_your_interests_title">Your Interests</string>
    <string name="su_your_interests_msg">You are more effective and stay motivated longer when you learn from topics you care about. Adjust your interests any time by visiting your profile.</string>
    <string name="su_your_interests_ok">OK</string>
    <string name="su_choose_request_notice">Notice</string>
    <string name="su_choose_request_msg">Please choose at least 1 option.</string>
    <string name="su_choose_request_ok">OK</string>
    <string name="su_updating">Updating&#8230;</string>
    <string name="su_sign_in_with">sign in with</string>
    <string-array name="su_goals">
        <item>Travel</item>
        <item>Business</item>
        <item>Chinese Proficiency Test</item>
        <item>Education</item>
        <item>Daily Communication</item>
    </string-array>
    <string-array name="su_interests">
        <item>Phrases</item>
        <item>Language Learning</item>
        <item>Survival Skills</item>
        <item>News</item>
        <item>Understanding China</item>
        <item>Funny</item>
        <item>Conversations</item>
        <item>Music</item>
    </string-array>
    <string name="su_beginner_1">Beginner 1</string>
    <string name="su_beginner_1_desc">You do not speak Chinese or speak only a little bit of Chinese.</string>
    <string name="su_beginner_2">Beginner 2</string>
    <string name="su_beginner_2_desc">You can conduct basic conversations and ask simple questions in Chinese.</string>
    <string name="su_intermediate_1">Intermediate 1</string>
    <string name="su_intermediate_1_desc">You can already communicate confidently about familiar topics related to your interests. You are able to understand the context of a conversation and to take part in an exchange.</string>
    <string name="su_intermediate_2">Intermediate 2</string>
    <string name="su_intermediate_2_desc">You can communicate confidently in Chinese on both routine and non-routine matters related to your interests.</string>
    <string name="su_advanced_1">Advanced 1</string>
    <string name="su_advanced_1_desc">You can communicate with and understand native Chinese speakers in everyday situations with little miscommunication but still make occasional mistakes.</string>
    <string name="su_advanced_2">Advanced 2</string>
    <string name="su_advanced_2_desc">You can interact with native Chinese speakers in wide variety of situations and express yourself with grammatical accuracy and a broad range of vocabulary.</string>
    <string name="su_continue_step">Step 1 of 3</string>
    <string name="su_continue_back">BACK</string>
    <string name="su_continue_next">NEXT</string>
    <string name="su_accomplish_chinese">What would you like to accomplish with Chinese?</string>
    <string name="su_what_interest_in">What are you interested in?</string>
    <string name="su_verify_number_desc"><![CDATA[We have sent a 4 digit verification code to <b>%1$s %2$s</b>. Please enter it below.]]></string>
    <string name="su_sign_up">SIGN UP</string>
    <string name="main_trial_not_complete">Trial class not complete</string>
    <string name="main_schedule">SCHEDULE</string>
    <string name="main_explore_now">Explore Now</string>
    <string name="main_sign_up">Sign up</string>
    <string name="main_up_to">UP TO</string>
    <string name="main_off">OFF</string>
    <string name="main_package">PACKAGE</string>
    <string name="wo_list_all">All</string>
    <string name="re_time_based">Time based</string>
    <string name="re_course_based">Course based</string>
    <string name="re_social_based">Social based</string>
    <string name="re_rating_and_reviews">Rating and Reviews</string>
    <string name="tu_select_class_type">Select Class Type</string>
    <string name="tu_select_course">Course - 50 minute lesson</string>
    <string name="tu_select_topic">Topic - 25 minute class</string>
    <string name="ar_btn_apply">APPLY</string>
    <string name="pc_share_title">Share to social media friends</string>
    <string name="pc_facebook">Facebook</string>
    <string name="pc_twitter">Twitter</string>
    <string name="pc_google_plus">Google Plus</string>
    <string name="pc_email">Email</string>
    <string name="pc_facebook_icon_miss">Facebook</string>
    <string name="pc_twitter_icon_miss">Twitter</string>
    <string name="pc_google_plus_icon_miss">Google Plus</string>
    <string name="pc_email_icon_miss">Email</string>
    <string name="basic">Basic</string>
    <string name="kids">Kids</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="sory_by_category">SORT BY CATEGORY</string>
    <string name="sory_by_level">SORT BY LEVEL</string>
    <string name="beginner1">Beginner 1</string>
    <string name="beginner2">Beginner 2</string>
    <string name="intermediate1">Intermediate 1</string>
    <string name="intermediate2">Intermediate 2</string>
    <string name="advanced1">Advanced 1</string>
    <string name="advanced2">Advanced 2</string>
    <string name="kid0">Kid 0</string>
    <string name="kid1">Kid 1</string>
    <string name="kid2">Kid 2</string>
    <string name="kid3">Kid 3</string>
</resources>