<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filter_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d0898989"
    android:visibility="visible">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_alignParentBottom="true"
        android:alpha="1.0"
        android:background="@color/white">


        <LinearLayout
            android:id="@+id/filter_hidden_layout"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <ImageView
                android:id="@+id/close"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:padding="@dimen/very_large_margin"
                android:src="@mipmap/filter_close"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginRight="@dimen/large_margin"
                android:layout_weight="5"
                android:text="@string/filter"
                android:textColor="@color/gray"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/reset_filter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:padding="@dimen/very_large_margin"
                android:text="@string/reset"
                android:textColor="@color/gray"
                android:textStyle="bold"/>
        </LinearLayout>

        <View
            android:id="@+id/vieww1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/filter_hidden_layout"
            android:background="@drawable/grey_layer"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/vieww1"
            android:orientation="vertical"
            android:padding="@dimen/large_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/sory_by_category"
                android:textColor="@color/gray"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/very_large_margin"
                android:layout_marginRight="@dimen/very_large_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/all_level_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/very_large_margin"
                    android:layout_weight="1"
                    android:background="@drawable/filter_level_unselected"
                    android:padding="@dimen/large_margin"
                    android:text="@string/wo_list_all"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/basic_level_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/very_large_margin"
                    android:layout_weight="1"
                    android:background="@drawable/filter_level_unselected"
                    android:padding="@dimen/large_margin"
                    android:text="@string/basic"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/kids_level_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/filter_level_unselected"
                    android:padding="@dimen/large_margin"
                    android:text="@string/kids"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="12sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="@dimen/very_large_margin"
                android:layout_marginTop="@dimen/very_large_margin"
                android:background="@color/light_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/sory_by_level"
                android:textColor="@color/gray"
                android:textStyle="bold"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:padding="@dimen/very_large_margin">

                <TextView
                    android:id="@+id/beginner1_level_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginEnd="@dimen/very_large_margin"
                    android:background="@drawable/filter_level_unselected"
                    android:padding="@dimen/large_margin"
                    android:text="@string/beginner1"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/beginner2_level_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginEnd="@dimen/very_large_margin"
                    android:background="@drawable/filter_level_unselected"
                    android:padding="@dimen/large_margin"
                    android:text="@string/beginner2"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/intermediate1_level_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:background="@drawable/filter_level_unselected"
                    android:paddingBottom="@dimen/large_margin"
                    android:paddingTop="@dimen/large_margin"
                    android:text="@string/intermediate1"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="12sp"/>


                <TextView
                    android:id="@+id/intermediate2_level_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginEnd="@dimen/very_large_margin"
                    android:layout_marginTop="@dimen/very_large_margin"
                    android:background="@drawable/filter_level_unselected"
                    android:padding="@dimen/large_margin"
                    android:text="@string/intermediate2"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/advance1_level_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginEnd="@dimen/very_large_margin"
                    android:layout_marginTop="@dimen/very_large_margin"
                    android:background="@drawable/filter_level_unselected"
                    android:padding="@dimen/large_margin"
                    android:text="@string/advanced1"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/advance2_level_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="@dimen/very_large_margin"
                    android:background="@drawable/filter_level_unselected"
                    android:padding="@dimen/large_margin"
                    android:text="@string/advanced2"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="12sp"/>


                <TextView
                    android:id="@+id/kid0_level_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginEnd="@dimen/very_large_margin"
                    android:layout_marginTop="@dimen/very_large_margin"
                    android:background="@drawable/filter_level_unselected"
                    android:padding="@dimen/large_margin"
                    android:text="@string/kid0"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/kid1_level_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginEnd="@dimen/very_large_margin"
                    android:layout_marginTop="@dimen/very_large_margin"
                    android:background="@drawable/filter_level_unselected"
                    android:padding="@dimen/large_margin"
                    android:text="@string/kid1"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/kid2_level_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="@dimen/very_large_margin"
                    android:background="@drawable/filter_level_unselected"
                    android:padding="@dimen/large_margin"
                    android:text="@string/kid2"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/kid3_level_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginEnd="@dimen/very_large_margin"
                    android:layout_marginTop="@dimen/very_large_margin"
                    android:background="@drawable/filter_level_unselected"
                    android:padding="@dimen/large_margin"
                    android:text="@string/kid3"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="12sp"/>
            </GridLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/apply_tv"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_alignParentBottom="true"
            android:background="@color/light_red"
            android:padding="@dimen/very_large_margin"
            android:text="@string/ar_btn_apply"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </RelativeLayout>
</RelativeLayout>